* GGL: * Deck.cs: * Magic3D.csproj: * DeckTemplate.goml: * NMS.svg: * NPH.svg: * ODY.svg: * PCY.svg: * PLC.svg: * RAV.svg: * MRD.svg: * M13.svg: * M14.svg: * M15.svg: * MBS.svg: * MMQ.svg: * MOR.svg: * ROE.svg: * TOR.svg: * UDS.svg: * ULG.svg: * USG.svg: * WWK.svg: * ZEN.svg: * TMP.svg: * RTR.svg: * SHM.svg: * SOK.svg: * SOM.svg: * STH.svg: * THS.svg: * 10E.svg: * ARB.svg: * AVR.svg: * BNG.svg: * BOK.svg: * CFX.svg: * CHK.svg: * ALA.svg: * 4ED.svg: * 5DN.svg: * 5ED.svg: * 6ED.svg: * 7ED.svg: * 8ED.svg: * 9ED.svg: * CSP.svg: * ISD.svg: * JOU.svg: * JUD.svg: * LGN.svg: * LRW.svg: * M10.svg: * M11.svg: * GTC.svg: * DIS.svg: * DKA.svg: * DST.svg: * EVE.svg: * EXO.svg: * FUT.svg: * GPT.svg: * M12.svg: expansion symbols
* MiscUtil: misc

* AiPlayer.cs: ImagePath->Path

* Magic.cs: decks

--- a/Magic3D.csproj
+++ b/Magic3D.csproj
@@ -102,7 +102,6 @@
     <Compile Include="src\engine\Attribut.cs" />
     <Compile Include="src\engine\Cost.cs" />
     <Compile Include="src\engine\Damage.cs" />
-    <Compile Include="src\Magic.cs" />
     <Compile Include="src\engine\MagicEngine.cs" />
     <Compile Include="src\engine\Mana.cs" />
     <Compile Include="src\engine\Spell.cs" />
@@ -149,6 +148,7 @@
     <Compile Include="src\engine\Effects\ChangeZoneEffect.cs" />
     <Compile Include="src\engine\Effects\TokenEffect.cs" />
     <Compile Include="src\engine\Effects\CounterEffect.cs" />
+    <Compile Include="src\Magic.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="images\marble1.jpg">
@@ -175,6 +175,7 @@
     <Folder Include="Datas\" />
     <Folder Include="src\LayoutsAndGroups\" />
     <Folder Include="src\engine\Effects\" />
+    <Folder Include="images\expansions\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="image2\abilities.svg" />
@@ -196,6 +197,65 @@
     <EmbeddedResource Include="image2\icon_phase_upkeep.svg" />
     <EmbeddedResource Include="ui\decks.goml" />
     <EmbeddedResource Include="ui\DeckTemplate.goml" />
+    <EmbeddedResource Include="images\expansions\4ED.svg" />
+    <EmbeddedResource Include="images\expansions\5ED.svg" />
+    <EmbeddedResource Include="images\expansions\6ED.svg" />
+    <EmbeddedResource Include="images\expansions\7ED.svg" />
+    <EmbeddedResource Include="images\expansions\8ED.svg" />
+    <EmbeddedResource Include="images\expansions\9ED.svg" />
+    <EmbeddedResource Include="images\expansions\10E.svg" />
+    <EmbeddedResource Include="images\expansions\ALA.svg" />
+    <EmbeddedResource Include="images\expansions\AVR.svg" />
+    <EmbeddedResource Include="images\expansions\JUD.svg" />
+    <EmbeddedResource Include="images\expansions\M10.svg" />
+    <EmbeddedResource Include="images\expansions\M11.svg" />
+    <EmbeddedResource Include="images\expansions\M12.svg" />
+    <EmbeddedResource Include="images\expansions\M13.svg" />
+    <EmbeddedResource Include="images\expansions\M14.svg" />
+    <EmbeddedResource Include="images\expansions\M15.svg" />
+    <EmbeddedResource Include="images\expansions\THS.svg" />
+    <EmbeddedResource Include="images\expansions\SHM.svg" />
+    <EmbeddedResource Include="images\expansions\EVE.svg" />
+    <EmbeddedResource Include="images\expansions\UDS.svg" />
+    <EmbeddedResource Include="images\expansions\RTR.svg" />
+    <EmbeddedResource Include="images\expansions\ULG.svg" />
+    <EmbeddedResource Include="images\expansions\DIS.svg" />
+    <EmbeddedResource Include="images\expansions\MRD.svg" />
+    <EmbeddedResource Include="images\expansions\MBS.svg" />
+    <EmbeddedResource Include="images\expansions\MOR.svg" />
+    <EmbeddedResource Include="images\expansions\LRW.svg" />
+    <EmbeddedResource Include="images\expansions\GTC.svg" />
+    <EmbeddedResource Include="images\expansions\WWK.svg" />
+    <EmbeddedResource Include="images\expansions\ISD.svg" />
+    <EmbeddedResource Include="images\expansions\GPT.svg" />
+    <EmbeddedResource Include="images\expansions\SOK.svg" />
+    <EmbeddedResource Include="images\expansions\DKA.svg" />
+    <EmbeddedResource Include="images\expansions\ARB.svg" />
+    <EmbeddedResource Include="images\expansions\SOM.svg" />
+    <EmbeddedResource Include="images\expansions\BNG.svg" />
+    <EmbeddedResource Include="images\expansions\NPH.svg" />
+    <EmbeddedResource Include="images\expansions\MMQ.svg" />
+    <EmbeddedResource Include="images\expansions\ROE.svg" />
+    <EmbeddedResource Include="images\expansions\LGN.svg" />
+    <EmbeddedResource Include="images\expansions\FUT.svg" />
+    <EmbeddedResource Include="images\expansions\JOU.svg" />
+    <EmbeddedResource Include="images\expansions\ZEN.svg" />
+    <EmbeddedResource Include="images\expansions\ODY.svg" />
+    <EmbeddedResource Include="images\expansions\USG.svg" />
+    <EmbeddedResource Include="images\expansions\STH.svg" />
+    <EmbeddedResource Include="images\expansions\5DN.svg" />
+    <EmbeddedResource Include="images\expansions\BOK.svg" />
+    <EmbeddedResource Include="images\expansions\CSP.svg" />
+    <EmbeddedResource Include="images\expansions\RAV.svg" />
+    <EmbeddedResource Include="images\expansions\PLC.svg" />
+    <EmbeddedResource Include="images\expansions\PCY.svg" />
+    <EmbeddedResource Include="images\expansions\DST.svg" />
+    <EmbeddedResource Include="images\expansions\CHK.svg" />
+    <EmbeddedResource Include="images\expansions\EXO.svg" />
+    <EmbeddedResource Include="images\expansions\TOR.svg" />
+    <EmbeddedResource Include="images\expansions\NMS.svg" />
+    <EmbeddedResource Include="images\expansions\TMP.svg" />
+    <EmbeddedResource Include="images\expansions\CFX.svg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="MiscUtil\MiscUtil.csproj">
