Card details pane

--- a/Magic3D.csproj
+++ b/Magic3D.csproj
@@ -258,6 +258,7 @@
     <EmbeddedResource Include="ui\DeckItemTemplate.goml" />
     <EmbeddedResource Include="ui\DeckDetails.goml" />
     <EmbeddedResource Include="ui\CardItemTemplate.goml" />
+    <EmbeddedResource Include="ui\CardDetails.goml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="MiscUtil\MiscUtil.csproj">
