--- a/Magic3D.csproj
+++ b/Magic3D.csproj
@@ -259,6 +259,8 @@
     <EmbeddedResource Include="ui\DeckDetails.goml" />
     <EmbeddedResource Include="ui\CardItemTemplate.goml" />
     <EmbeddedResource Include="ui\CardDetails.goml" />
+    <EmbeddedResource Include="ui\CostItemTemplate.goml" />
+    <EmbeddedResource Include="images\Mana2.svg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="MiscUtil\MiscUtil.csproj">
