* Magic.cs, Cards.goml, Magic3D.csproj, MagicCard.cs, MagicData.cs,   mainMenu.goml, CardVisitor.cs:   CardVisitor and first try with full cards list (14000 elmts)
* fps.goml:
  debug

--- a/Magic3D.csproj
+++ b/Magic3D.csproj
@@ -146,6 +146,7 @@
     <Compile Include="src\engine\Effects\TokenEffect.cs" />
     <Compile Include="src\engine\Effects\CounterEffect.cs" />
     <Compile Include="src\Magic.cs" />
+    <Compile Include="ui\CardVisitor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="images\marble1.jpg">
