--- a/Magic3D.csproj
+++ b/Magic3D.csproj
@@ -19,16 +19,15 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>TRACE;DEBUG;</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;__linux__</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
-    <DefineConstants>TRACE;_WIN32</DefineConstants>
+    <DefineConstants>__linux__</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -58,9 +57,6 @@
     <None Include="images\d20.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="images\abstract1.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="images\abstract2.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -82,14 +78,12 @@
     <None Include="ui\text.goml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="images\abstrait3.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="images\abstrait4.jpg" />
     <None Include="Datas\cardsfolder.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="meshes\coin.obj" />
+    <None Include="meshes\coin.obj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="meshes\dollar.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -272,6 +266,11 @@
     <EmbeddedResource Include="ui\ComboOverlayTemplate.goml" />
     <EmbeddedResource Include="ui\MagicStack.goml" />
     <EmbeddedResource Include="ui\MSEItemTemplate.goml" />
+    <EmbeddedResource Include="ui\Splash.goml" />
+    <EmbeddedResource Include="images\splash.png" />
+    <EmbeddedResource Include="images\abstrait4.jpg" />
+    <EmbeddedResource Include="images\abstract1.jpg" />
+    <EmbeddedResource Include="images\abstrait3.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="MiscUtil\MiscUtil.csproj">
